Поправил результаты OCR

--- a/OCR/ocr_predict.ipynb
+++ b/OCR/ocr_predict.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
        "[8500 rows x 5 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
        "[500 rows x 5 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,15 +445,6 @@
    "source": [
     "test_data['path'] = test_data['img'].apply(lambda x: os.path.join(data_dir, x))\n",
     "test_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "easyocr_reader = easyocr.Reader(['ru','en']) # this needs to run only once to load the model into memory"
    ]
   },
   {
@@ -553,6 +544,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -581,40 +579,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.04052800000000001"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "loss(test_data['path'].values, \n",
-    "     test_data['text'].values,\n",
-    "     recognizer_name='easyocr', \n",
-    "     image_transform=ImageTransformType.BinaryInv, \n",
-    "     thresh=253, \n",
-    "     maxval=95,\n",
-    "     block_size=0,\n",
-    "     c=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,18 +623,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Value: 0.04052800000000001\n",
-    "#Parameters: {'image_transform': <ImageTransformType.BinaryInv: 3>, 'thresh': 253, 'maxval': 95}\n",
+    "easyocr_reader = easyocr.Reader(['en']) # this needs to run only once to load the model into memory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.015208000000000003"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loss(test_data['path'].values, \n",
+    "     test_data['text'].values,\n",
+    "     recognizer_name='easyocr', \n",
+    "     image_transform=ImageTransformType.BinaryInv, \n",
+    "     thresh=247, \n",
+    "     maxval=62,\n",
+    "     block_size=0,\n",
+    "     c=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Value: 0.015208000000000003\n",
+    "#Parameters: {'image_transform': <ImageTransformType.BinaryInv: 3>, 'thresh': 247, 'maxval': 62}\n",
     "\n",
     "recognized_text = recognize(test_data['path'].values, \n",
     "     recognizer_name='easyocr', \n",
     "     image_transform=ImageTransformType.BinaryInv, \n",
-    "     thresh=253, \n",
-    "     maxval=95,\n",
+    "     thresh=247, \n",
+    "     maxval=62,\n",
     "     block_size=0,\n",
     "     c=0)\n",
     "\n",
@@ -711,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +778,7 @@
        "      <td>0</td>\n",
        "      <td>its their character not their color that matters</td>\n",
        "      <td>its their character  hot their color that matt...</td>\n",
-       "      <td>lits their characler' nlot tleir colar that ma...</td>\n",
+       "      <td>its their character] uot their color that mnat...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -773,7 +787,7 @@
        "      <td>0</td>\n",
        "      <td>don't be afraid to love again everyone is not ...</td>\n",
        "      <td>don't he afraid to love  r again  everyone is ...</td>\n",
-       "      <td>ilon't he afraidl 10 Ioue agail euerуо1e is ml...</td>\n",
+       "      <td>tlon't he afraid t0 love again evervone is not...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -782,7 +796,7 @@
        "      <td>0</td>\n",
        "      <td>putting bows on your pet</td>\n",
        "      <td>putting hows on your pet</td>\n",
-       "      <td>IlltIinlg hows 0ll VOIIr [lel</td>\n",
+       "      <td>pvutting hows On1 our pet</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -791,7 +805,7 @@
        "      <td>0</td>\n",
        "      <td>i love everything and everybody! except for sq...</td>\n",
        "      <td>iMlovereverything and Bare ios  except for squ...</td>\n",
-       "      <td>[lUшGuerything andl е1eПШЮШЫЕ eKcellt for sulu...</td>\n",
+       "      <td>ilove everything and evelbbodlyl except for Sq...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -800,7 +814,7 @@
        "      <td>0</td>\n",
        "      <td>everybody loves chocolate chip cookies, even h...</td>\n",
        "      <td>\"everyhotly loves chocolate  chip cookies, eve...</td>\n",
-       "      <td>\"euervhotly loues chocolate chil cookies; euem...</td>\n",
+       "      <td>\"everyhody loves chocolate chip cookies, even ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -818,7 +832,7 @@
        "      <td>1</td>\n",
        "      <td>nobody wants to hang auschwitz me</td>\n",
        "      <td>nobody wants to  hang auschwitz me</td>\n",
-       "      <td>nohotlv wants [0 hang auschwitz Ile</td>\n",
+       "      <td>nohody wants t0 hang auschwitz mne</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8496</th>\n",
@@ -827,7 +841,7 @@
        "      <td>1</td>\n",
        "      <td>when god grants you a child after 20 years of ...</td>\n",
        "      <td>vhien god grants you a child after 20 years of...</td>\n",
-       "      <td>whcn goil grants UDII a chilil attct 20 uGars ...</td>\n",
+       "      <td>whcu god grants VOl @ childl aftcr 20 vcars of...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8497</th>\n",
@@ -836,7 +850,7 @@
        "      <td>1</td>\n",
        "      <td>gays on social media: equality! body positivit...</td>\n",
        "      <td>yay cn stivial meta: etucniy! tally positivity...</td>\n",
-       "      <td>'li65 IhI 5[I:X;] I:li;: #IIIKIl,l#! [ИH]# IIU...</td>\n",
+       "      <td>Walys UIII SIIi%l Mli;l: #IU;Iv! Eglu HUSMUMy!...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8498</th>\n",
@@ -845,7 +859,7 @@
        "      <td>1</td>\n",
        "      <td>having a bad day? you could be a siamese twin ...</td>\n",
        "      <td>having a bad tay? vou couli le a siamese twin ...</td>\n",
-       "      <td>Inauing a bal ilav? VDL cuIIIIl Ile a SIamlles...</td>\n",
+       "      <td>having a had Ilay? VOL COULil he a siamese [WI...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8499</th>\n",
@@ -854,7 +868,7 @@
        "      <td>1</td>\n",
        "      <td>i hate muslims too they take their religion to...</td>\n",
        "      <td>ihate musliins too they take their religion to...</td>\n",
-       "      <td>hate Imllslimns I00 they take Iheir religioll ...</td>\n",
+       "      <td>hate IHuSlimns too they lake their religion to...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -902,22 +916,22 @@
        "8499  ihate musliins too they take their religion to...   \n",
        "\n",
        "                                recognized_text_easyocr  \n",
-       "0     lits their characler' nlot tleir colar that ma...  \n",
-       "1     ilon't he afraidl 10 Ioue agail euerуо1e is ml...  \n",
-       "2                         IlltIinlg hows 0ll VOIIr [lel  \n",
-       "3     [lUшGuerything andl е1eПШЮШЫЕ eKcellt for sulu...  \n",
-       "4     \"euervhotly loues chocolate chil cookies; euem...  \n",
+       "0     its their character] uot their color that mnat...  \n",
+       "1     tlon't he afraid t0 love again evervone is not...  \n",
+       "2                             pvutting hows On1 our pet  \n",
+       "3     ilove everything and evelbbodlyl except for Sq...  \n",
+       "4     \"everyhody loves chocolate chip cookies, even ...  \n",
        "...                                                 ...  \n",
-       "8495                nohotlv wants [0 hang auschwitz Ile  \n",
-       "8496  whcn goil grants UDII a chilil attct 20 uGars ...  \n",
-       "8497  'li65 IhI 5[I:X;] I:li;: #IIIKIl,l#! [ИH]# IIU...  \n",
-       "8498  Inauing a bal ilav? VDL cuIIIIl Ile a SIamlles...  \n",
-       "8499  hate Imllslimns I00 they take Iheir religioll ...  \n",
+       "8495                 nohody wants t0 hang auschwitz mne  \n",
+       "8496  whcu god grants VOl @ childl aftcr 20 vcars of...  \n",
+       "8497  Walys UIII SIIi%l Mli;l: #IU;Iv! Eglu HUSMUMy!...  \n",
+       "8498  having a had Ilay? VOL COULil he a siamese [WI...  \n",
+       "8499  hate IHuSlimns too they lake their religion to...  \n",
        "\n",
        "[8500 rows x 6 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -928,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -968,7 +982,7 @@
        "      <td>1</td>\n",
        "      <td>white people is this a shooting range</td>\n",
        "      <td>white people is this a shooting range</td>\n",
-       "      <td>while meomle is Ihis a shooting range</td>\n",
+       "      <td>white people is this a shooting range</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -977,7 +991,7 @@
        "      <td>1</td>\n",
        "      <td>bravery at its finest</td>\n",
        "      <td>bravery  aLilsfinest</td>\n",
-       "      <td>Wrauery aLilsfinBst</td>\n",
+       "      <td>hravery ~abils [iuest ;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -986,7 +1000,7 @@
        "      <td>1</td>\n",
        "      <td>your order comes to $37.50 and your white priv...</td>\n",
        "      <td>your order comes to $37.50  and your white pri...</td>\n",
-       "      <td>VOUX Oriler comeS 10 $37.50 antl vour white [r...</td>\n",
+       "      <td>vour order comes t0 S37.50 and your white priv...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -995,7 +1009,7 @@
        "      <td>1</td>\n",
        "      <td>it is time.. to send these parasites back to t...</td>\n",
        "      <td>itis time..  to send these parasites hack to t...</td>\n",
-       "      <td>it is Iillle.- ID seIlIl these mlarasites hack...</td>\n",
+       "      <td>Jitis Lime. t0 scnd thcsc Qarasitcs hack to th...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1004,7 +1018,7 @@
        "      <td>1</td>\n",
        "      <td>mississippi wind chime</td>\n",
        "      <td>mississippi  wind chime</td>\n",
-       "      <td>IIisSissilli windl chime</td>\n",
+       "      <td>mississippi wind chime</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1022,7 +1036,7 @@
        "      <td>0</td>\n",
        "      <td>i'm gonna be like phelps one day</td>\n",
        "      <td>rm gonna he like phelps one day</td>\n",
-       "      <td>iml gJullna he like phells 0Ile Ilay</td>\n",
+       "      <td>0'071 gonna he Iike pvhelps one day</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>496</th>\n",
@@ -1031,7 +1045,7 @@
        "      <td>0</td>\n",
        "      <td>when you're so relaxed you can feel yourself g...</td>\n",
        "      <td>when you're so relaxed you can feel yourself  ...</td>\n",
-       "      <td>when vou're sO relaxell VOI can feel vourSelf ...</td>\n",
+       "      <td>when vou're SO relaxed vou can feel yourself g...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>497</th>\n",
@@ -1040,7 +1054,7 @@
        "      <td>0</td>\n",
        "      <td>look at this sandwich maker club i found on wi...</td>\n",
        "      <td>look at this sandwich inaker club  Hfound on w...</td>\n",
-       "      <td>Iook at this samlwich Illaker clul fOIIIlII 0I...</td>\n",
+       "      <td>look at this sandwich maker club fount 0n wish...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>498</th>\n",
@@ -1049,7 +1063,7 @@
        "      <td>0</td>\n",
        "      <td>diverse group of women</td>\n",
        "      <td>CIUEFSEWQKOUD Of women</td>\n",
-       "      <td>(luemsegmmn ofmmGП</td>\n",
+       "      <td>diverse @eouj) 0f [omen</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>499</th>\n",
@@ -1058,7 +1072,7 @@
        "      <td>0</td>\n",
        "      <td>\"when your dishwasher is broken so you take it...</td>\n",
        "      <td>“MEN yOu ihvastet rok Oyo ake hack lo walnara ...</td>\n",
-       "      <td>\"ШlIIЙ [lI @Jhlillll\"</td>\n",
+       "      <td>\"Hhbyux shhasher[S hokel SOJUHe_ hack OHAHAULH...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1106,22 +1120,22 @@
        "499  “MEN yOu ihvastet rok Oyo ake hack lo walnara ...   \n",
        "\n",
        "                               recognized_text_easyocr  \n",
-       "0                while meomle is Ihis a shooting range  \n",
-       "1                                  Wrauery aLilsfinBst  \n",
-       "2    VOUX Oriler comeS 10 $37.50 antl vour white [r...  \n",
-       "3    it is Iillle.- ID seIlIl these mlarasites hack...  \n",
-       "4                             IIisSissilli windl chime  \n",
+       "0                white people is this a shooting range  \n",
+       "1                              hravery ~abils [iuest ;  \n",
+       "2    vour order comes t0 S37.50 and your white priv...  \n",
+       "3    Jitis Lime. t0 scnd thcsc Qarasitcs hack to th...  \n",
+       "4                               mississippi wind chime  \n",
        "..                                                 ...  \n",
-       "495               iml gJullna he like phells 0Ile Ilay  \n",
-       "496  when vou're sO relaxell VOI can feel vourSelf ...  \n",
-       "497  Iook at this samlwich Illaker clul fOIIIlII 0I...  \n",
-       "498                                 (luemsegmmn ofmmGП  \n",
-       "499                              \"ШlIIЙ [lI @Jhlillll\"  \n",
+       "495                0'071 gonna he Iike pvhelps one day  \n",
+       "496  when vou're SO relaxed vou can feel yourself g...  \n",
+       "497  look at this sandwich maker club fount 0n wish...  \n",
+       "498                            diverse @eouj) 0f [omen  \n",
+       "499  \"Hhbyux shhasher[S hokel SOJUHe_ hack OHAHAULH...  \n",
        "\n",
        "[500 rows x 6 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
