deploy demo_bot

--- a/deploy/demo_bot/demo_bot.ipynb
+++ b/deploy/demo_bot/demo_bot.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
     }
    ],
    "source": [
-    "bot = telebot.TeleBot('5838296860:AAG8UTY2WVmQ2TDGX6LjWN65cZTYCOGabGI')\n",
+    "bot = telebot.TeleBot()\n",
     "\n",
     "\n",
     "@bot.message_handler(commands=[\"start\"])\n",
@@ -159,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
